# symphony

./: README.md
python/: README.md  WORKFLOW.jira.example.md  WORKFLOW.linear.example.md  WORKFLOW.memory.example.md  pyproject.toml  sample_issues.json
python/src/symphony_service/: __init__.py  agent_runner.py  cli.py  codex_app_server.py  config.py  errors.py  logging_utils.py  models.py  orchestrator.py  prompt.py  status_http.py  tracker.py  workflow.py  workspace.py
python/tests/: test_config.py  test_prompt.py  test_tracker.py  test_workflow.py  test_workspace.py
